VR: Make sure that scroll isn't sent without scrollBegin

VrInputManager stops scrollUpdate/scrollEnd/fling if there hasn't been
a scrollBegin before them. It happens when scrolling happens during the
transition from a native page to a web page.

BUG=733419

Change-Id: I57c0eab27249db3542f14d744cd577a86e0bbf4a